web/src/toga_web/static/toga.css
/**********************************************************************
 * Main page
 **********************************************************************/

* {
    box-sizing: border-box;
    line-height: 1;
}

html, body {
    height: 100%;
    margin: 0;
}

#app-placeholder {
    font-family: var(--wa-font-family-body);
    font-size: var(--wa-font-size-m);
}

/* If a custom element hasn't been defined yet, hide it from rendering */
:not(:defined) {
    visibility: hidden;
}

/**********************************************************************
 * Application header
 **********************************************************************/

header.toga {
    background-color: var(--wa-color-brand-40);
    color: var(--wa-color-brand-on-loud);
    display: flex;
    flex-direction: row;
    align-items: center;
}

/***** App branding logo **********************************************/

header.toga a.brand {
    margin: 8px 1em;
}

header.toga a.brand img {
    width: 32px;
}

header.toga nav {
    display: inline-block;
}

header.toga nav.menubar {
    flex-grow: 1;
    font-family: var(--wa-font-family-body);
    font-size: var(--wa-font-size-l);
}

header.toga nav.menubar:last-of-type {
    flex-grow: 0;
    padding-right: 1em;
}

/***** Menubar ********************************************************/

header.toga nav.menubar .menu {
    color: var(--wa-color-brand-on-loud);
    padding: 0.5em;
}

header.toga nav.menubar .menu:hover {
    background-color: var(--wa-color-brand-40);
    color: var(--wa-color-brand-on-loud);
}

header.toga nav.menubar .app {
    color: var(--wa-color-brand-on-loud);
    font-weight: var(--wa-font-weight-bold);
}

/**********************************************************************
 * Main window
 **********************************************************************/

main.toga.window {
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

main.toga.window > .container {
    /* The immediate container descendents of the window must expand
       to fill the full width of the window. */
    flex-grow: 1 !important;
}

/**********************************************************************
 * Widgets
 **********************************************************************/

/***** All containers *************************************************/

.toga .container {
    display: flex;
}

/***** Label **********************************************************/
.toga .label {
    white-space: nowrap;
}

/***** Slider *********************************************************/
/* wa-slider defaults to display:inline (custom element default), which
   ignores width and doesn't stretch in flex containers. sl-range set
   display:block internally; wa-slider does not. */
.toga wa-slider {
    display: block;
    width: 100%;
}

